<resources>
    <string name="app_name">Orionx</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ihsan Puntadewa</string>
    <string name="nav_header_subtitle">ihsan.puntadewa@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_utama">Selamat Datang</string>
    <string name="menu_sewa">Sewa Lapangan</string>
    <string name="menu_transaksi">Riwayat Transaksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pembayaran">Silahkan melakukan pembayaran melalui transfer ke salah satu rekening bank berikut :</string>
    <string name="upload">Upload Bukti Pembayaran</string>
    <string name="orion">Orion Sport Centre Purwokerto</string>
    <string name="satu">08:00 - 09:00</string>
    <string name="dua">09:00 - 10:00</string>
    <string name="tiga">10:00 - 11:00</string>
    <string name="empat">11:00 - 12:00</string>
    <string name="lima">12:00 - 13:00</string>
    <string name="enam">13:00 - 14:00</string>
    <string name="tujuh">14:00 - 15:00</string>
    <string name="delapan">15:00 - 16:00</string>
    <string name="sembilan">16:00 - 17:00</string>
    <string name="sepuluh">17:00 - 18:00</string>
    <string name="sebelas">18:00 - 19:00</string>
    <string name="duabelas">19:00 - 20:00</string>
</resources>