<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_utama">

    <fragment
        android:id="@+id/nav_utama"
        android:name="com.example.projekaplikasimobilefix.ui.utama.utamaFragment"
        android:label="@string/menu_utama"
        tools:layout="@layout/fragment_utama"/>

    <fragment
        android:id="@+id/nav_sewalapangan"
        android:name="com.example.projekaplikasimobilefix.ui.sewa.sewaFragment"
        android:label="@string/menu_sewa"
        tools:layout="@layout/fragment_sewa"/>

    <fragment
        android:id="@+id/nav_daftartransaksi"
        android:name="com.example.projekaplikasimobilefix.ui.transaksi.transaksiFragment"
        android:label="@string/menu_transaksi"
        tools:layout="@layout/fragment_transaksi"/>
</navigation>