<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PembayaranActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/harga"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lapangan"
        android:layout_below="@id/harga"
        />

    <TextView
        android:id="@+id/jadwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lapangan" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtpembayaran"
        android:text="@string/pembayaran"
        android:textSize="23dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textAlignment="center"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/txtpembayaran"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/bank">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/bni"
                android:id="@+id/bni2">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7749829734623"
                android:textSize="20dp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Orion Purwokerto"
                android:textSize="20dp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/bni"
                android:id="@+id/bca">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8719842647892"
                android:textSize="20dp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Orion Purwokerto"
                android:textSize="20dp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtBukti"
        >
        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txtBukti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/upload"
        android:textSize="20dp"
        android:textStyle="bold"></TextView>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_200"
        android:text="Upload"
        ></Button>

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_200"
        android:text="Kirim data"></Button>

    <ImageView
        android:id="@+id/bottomgoogle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnInsert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/google1"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottomgoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/orion"
        android:textSize="15dp"></TextView>

</RelativeLayout>